<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VAT Calculator</string>
    <string name="about_created">App created by Arctosoft AB.\nVersion 1.3.1</string>
    <string name="menu_home">Add VAT</string>
    <string name="menu_reverse">Remove VAT</string>
    <string name="menu_about">About</string>

    <string name="home_title">Add VAT</string>
    <string name="home_subtitle">Calculate the price inclusive VAT</string>
    <string name="reverse_title">Remove VAT</string>
    <string name="reverse_subtitle">Calculate the price exclusive VAT</string>
    <string name="about_title">About</string>
    <string name="about_subtitle">An app to add or remove VAT easily.</string>
    <string name="about_rate">Like the app?</string>
    <string name="about_rate_button">Rate it on Google Play</string>
    <string name="about_vat_howto_title">VAT calculations:</string>
    <string name="about_vat_howto">Adding 21% VAT:\n(price excl. VAT) * 1.21\n\n
        Removing 21% VAT:\n(price incl. VAT) / 1.21</string>

    <string name="spinner_items">Common VAT rates:</string>
    <string name="spinner_default_text">Select a country</string>
    <string name="spinner_more_in_about">VAT rates for each country can be found in About</string>
    <string name="spinner_help">Choose a country from the list to see its VAT rates:</string>
    <string name="spinner_item_standard_rate">Standard rate: %1$s%%</string>
    <string name="spinner_item_reduced_rates">Reduced rates:\n%1$s</string>

    <string name="price_exclusive_vat_hint">Price exclusive of VAT</string>
    <string name="price_inclusive_vat_hint">Price inclusive of VAT</string>
    <string name="vat_rate">VAT rate</string>
    <string name="price_inclusive_vat_output_text">Price inclusive %1$s%% VAT:</string>
    <string name="price_exclusive_vat_output_text">Price exclusive %1$s%% VAT:</string>
    <string name="vat_amount">VAT amount:</string>

    <string name="percentage" translatable="false">%</string>
    <string name="percentage_placeholder" translatable="false">%1$s%%</string>

</resources>
