<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="se.arctosoft.vatcalculator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reverse"
        android:name="se.arctosoft.vatcalculator.ui.reverse.ReverseFragment"
        android:label="@string/menu_reverse"
        tools:layout="@layout/fragment_reverse" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="se.arctosoft.vatcalculator.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>
