<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_title_padding"
                android:text="@string/about_title"
                android:textAlignment="center"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_title_padding"
                android:paddingEnd="@dimen/text_title_padding"
                android:paddingBottom="@dimen/text_subtitle_padding_bottom"
                android:text="@string/about_subtitle"
                android:textAlignment="center"
                android:textSize="@dimen/text_subtitle_size" />

            <View
                android:layout_width="@dimen/divider_width"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_subtitle_padding_bottom"
                android:alpha="0.5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_title_padding"
                android:paddingEnd="@dimen/text_title_padding"
                android:paddingBottom="@dimen/text_subtitle_padding_bottom"
                android:text="@string/about_rate"
                android:textAlignment="center"
                android:textSize="@dimen/text_subtitle_size" />

            <Button
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="@dimen/text_title_padding"
                android:paddingEnd="@dimen/text_title_padding"
                android:paddingBottom="@dimen/text_subtitle_padding_bottom"
                android:text="@string/about_rate_button" />

            <View
                android:layout_width="@dimen/divider_width_smaller"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_subtitle_padding_bottom"
                android:layout_marginBottom="@dimen/text_subtitle_padding_bottom"
                android:alpha="0.5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_title_padding"
                android:paddingEnd="@dimen/text_title_padding"
                android:paddingBottom="@dimen/text_subtitle_padding_bottom"
                android:text="@string/about_created"
                android:textAlignment="center"
                android:textSize="@dimen/text_subtitle_size" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>